# arcfile-rs

./: .gitignore  Cargo.toml  Containerfile  LICENSE  README.md
.github/workflows/: ci.yaml  container.yaml  docs.yaml
core/: Cargo.toml
core/src/: arcfile.rs  data_mode.rs  error.rs  lib.rs  register.rs  regmap.rs
core/tests/: integration.rs
matlab/: Cargo.toml  README.md  readarc_rs.mex
matlab/src/: error.rs  lib.rs  logging.rs
mex/: Cargo.toml  readarc_rs.mex  readarc_rs.mexa64
mex/src/: lib.rs  logging.rs
py/: Cargo.toml  arcfile.pyi  pyproject.toml
py/src/: lib.rs
py/tests/integration/: test_arcfileload.py
