[package]
name = "arcfile-rs"
readme = "../README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = { version = "2.11.0", features = ["std"] }
byteorder = "1.5.0"
bzip2 = "0.6.1"
env_logger = "0.11.9"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
rayon = "1.11.0"
thiserror = "2.0.18"
log.workspace = true
jiff.workspace = true
bytemuck = { version = "1.25.0", features = ["extern_crate_alloc"] }

[dev-dependencies]
tempfile = "3.27.0"
