[package]
name = "arcfile-matlab"
version = "0.1.0"
edition = "2024"
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
arcfile-rs = { path = "../core" }
rustmex = { git = 'https://gitlab.com/bdelwood/rustmex', version = "0.6.3", features = [
    "matlab800",
] }
log = { workspace = true }
jiff = { workspace = true }
