[package]
name = "arcfile-matlab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arcfile-rs = { path = "../core" }
rustmex = { git = 'https://gitlab.com/bdelwood/rustmex', version = "0.6.3", features = [
    "matlab800",
] }
log.workspace = true
jiff.workspace = true
