[package]
name = "arcfile-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arcfile_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
arcfile_core = { package = 'arcfile', path = "../core" }
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py310"] }
pyo3-log = "0.13.3"
log.workspace = true
jiff.workspace = true
pyo3-stub-gen = "0.19.0"
